Preparing for final 2.0.0.
 * Partial modularisation
 * More complete sshapi-cli
 * New SSHJ provider (WIP)
 * Managed host keys now used extended interface.