@@ -1,25 +1,23 @@
-/* 
- * Copyright (c) 2010 The JavaSSH Project
- * All rights reserved.
- * 
- * Permission is hereby granted, free  of charge, to any person obtaining
- * a  copy  of this  software  and  associated  documentation files  (the
- * "Software"), to  deal in  the Software without  restriction, including
- * without limitation  the rights to  use, copy, modify,  merge, publish,
- * distribute,  sublicense, and/or sell  copies of  the Software,  and to
- * permit persons to whom the Software  is furnished to do so, subject to
- * the following conditions:
- * 
- * The  above  copyright  notice  and  this permission  notice  shall  be
- * included in all copies or substantial portions of the Software.
- * 
- * THE  SOFTWARE IS  PROVIDED  "AS  IS", WITHOUT  WARRANTY  OF ANY  KIND,
- * EXPRESS OR  IMPLIED, INCLUDING  BUT NOT LIMITED  TO THE  WARRANTIES OF
- * MERCHANTABILITY,    FITNESS    FOR    A   PARTICULAR    PURPOSE    AND
- * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
- * LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
- * OF CONTRACT, TORT OR OTHERWISE,  ARISING FROM, OUT OF OR IN CONNECTION
- * WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+/**
+ * Copyright (c) 2020 The JavaSSH Project
+ *
+ *  Permission is hereby granted, free of charge, to any person obtaining a copy
+ *  of this software and associated documentation files (the "Software"), to deal
+ *  in the Software without restriction, including without limitation the rights
+ *  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ *  copies of the Software, and to permit persons to whom the Software is
+ *  furnished to do so, subject to the following conditions:
+ *
+ *  The above copyright notice and this permission notice shall be included in
+ *  all copies or substantial portions of the Software.
+ *
+ *  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ *  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ *  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ *  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ *  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ *  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ *  THE SOFTWARE.
  */
 package net.sf.sshapi.impl.ganymed;
 
@@ -403,7 +401,7 @@ class GanymedSftpClient extends AbstractSftpClient {
 	public void chmod(String path, int permissions) throws SshException {
 		try {
 			SFTPv3FileAttributes entry = client.stat(path);
-			entry.permissions = new Integer(permissions);
+			entry.permissions = Integer.valueOf(permissions);
 			client.setstat(path, entry);
 		} catch (SFTPException sftpE) {
 			throw new GanymedSftpException(sftpE, String.format("Could not set file permissions. %s", path));
@@ -416,7 +414,7 @@ class GanymedSftpClient extends AbstractSftpClient {
 	public void chown(String path, int uid) throws SshException {
 		try {
 			SFTPv3FileAttributes entry = client.stat(path);
-			entry.uid = new Integer(uid);
+			entry.uid = Integer.valueOf(uid);
 			client.setstat(path, entry);
 		} catch (SFTPException sftpE) {
 			throw new GanymedSftpException(sftpE, String.format("Could not set file owner. %s", path));
@@ -429,7 +427,7 @@ class GanymedSftpClient extends AbstractSftpClient {
 	public void chgrp(String path, int gid) throws SshException {
 		try {
 			SFTPv3FileAttributes entry = client.stat(path);
-			entry.gid = new Integer(gid);
+			entry.gid = Integer.valueOf(gid);
 			client.setstat(path, entry);
 		} catch (SFTPException sftpE) {
 			throw new GanymedSftpException(sftpE, String.format("Could not set file group. %s", path));
